manifest/vs-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vintage-story-server
spec:
  serviceName: "vintage-story-server"
  replicas: 1
  selector:
    matchLabels:
      app: vintage-story-server
  template:
    metadata:
      labels:
        app: vintage-story-server
    spec:
      imagePullSecrets:
        - name: harbor-k3s
      containers:
      - name: vintage-story-server
        image: vintage-story-server:latest  # You'll need to replace this with the actual image
        imagePullPolicy: Always
        ports:
        - name: vs-server
          containerPort: 42420
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
        - name: vs-data
          mountPath: /var/vintage_story
  volumeClaimTemplates:
  - metadata:
      name: vs-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi  # Adjust this value based on your needs
