manifest/vs-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vintage-story-server
spec:
  selector:
    app: vintage-story-server
  ports:
    - protocol: TCP
      port: 42420
      targetPort: 42420
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: vintage-story-filebrowser
spec:
  selector:
    app: vintage-story-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
