manifest/filebrowser-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ingress
  annotations:
    cert-manager.io/cluster-issuer: cf-gallis
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: vs-files.w.gallis.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vintage-story-filebrowser
            port:
              number: 8080
  tls:
  - hosts:
    - vs-files.w.gallis.cloud
    secretName: vs-files-w-gallis-cloud-tls
